--- a/droidux/build.gradle
+++ b/droidux/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.android.databinding'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
@@ -10,6 +12,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -19,5 +25,7 @@ android {
 }
 
 dependencies {
+    compile 'io.reactivex:rxjava:1.0.15'
+
     testCompile 'junit:junit:4.12'
 }
