--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -1,5 +1,30 @@
+import org.gradle.internal.jvm.Jvm
+
 apply plugin: 'java'
+apply plugin: 'me.tatarka.retrolambda'
+
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', '../droidux/src/main/java']
+        }
+    }
+}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup:javapoet:1.3.0'
+    compile 'com.google.auto.service:auto-service:1.0-rc2'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:2.2.0'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'com.google.testing.compile:compile-testing:0.6'
+    testCompile files(Jvm.current().getToolsJar())
+    compile 'io.reactivex:rxjava:1.0.15'
+    compile 'com.google.android:android:4.1.1.4'
+    compile 'com.android.databinding:baseLibrary:1.0-rc3'
+    compile fileTree(dir: './libs', includes: ['*.jar'])
 }
