--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.3.0'
         classpath "com.android.databinding:dataBinder:1.0-rc3"
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.novoda:bintray-release:0.3.4'
         classpath 'me.tatarka:gradle-retrolambda:3.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,4 +24,13 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    def versionMajor = 0
+    def versionMinor = 1
+    def versionPatch = 0
+    def versionBuild = 0
+
+    VERSION = "${versionMajor}.${versionMinor}.${versionPatch}"
 }
