--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -16,6 +16,7 @@ sourceSets {
 
 dependencies {
     compile 'com.squareup:javapoet:1.3.0'
+    compile 'com.google.auto:auto-common:0.5'
     compile 'com.google.auto.service:auto-service:1.0-rc2'
 
     testCompile 'junit:junit:4.12'
