--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
@@ -10,6 +11,7 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.novoda:bintray-release:0.3.4'
         classpath 'me.tatarka:gradle-retrolambda:3.2.3'
+        classpath 'com.github.groovy:groovy-android-gradle-plugin:1b77dd6763'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
