--- a/droidux/build.gradle
+++ b/droidux/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.android.databinding'
 apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'groovyx.grooid.groovy-android'
 
 android {
     compileSdkVersion 23
@@ -31,6 +32,8 @@ dependencies {
     provided 'io.reactivex:rxjava:1.0.15'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib-nodep:2.2'
 }
 
 publish {
