--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':droidux', ':droidux-processor', ':examples:todomvc'
+include ':droidux', ':droidux-processor', ':examples:todomvc', ':todos-with-undo'
