--- a/middlewares/droidux-thunk/build.gradle
+++ b/middlewares/droidux-thunk/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'groovyx.grooid.groovy-android'
 
 android {
     compileSdkVersion 23
@@ -19,7 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    provided 'io.reactivex:rxjava:1.0.15'
+    provided project(':droidux')
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib-nodep:2.2'
 }
