--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':droidux', ':droidux-processor', ':middlewares:droidux-thunk', ':examples:todomvc', ':examples:todos-with-undo', ':todos-with-dagger'
+include ':droidux', ':droidux-processor', ':middlewares:droidux-thunk'
+include ':examples:todomvc', ':examples:todos-with-undo', ':examples:todos-with-dagger'
