--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -31,11 +31,11 @@ dependencies {
 }
 
 publish {
-    userOrg = 'izumin5210'
-    groupId = 'info.izumin.android'
+    userOrg = USER_ORG
+    groupId = GROUP_ID
     artifactId = 'droidux-processor'
     version = VERSION
     description = 'Code generator for info.izumin.android.droidux'
-    website = 'https://github.com/izumin5210/Droidux'
+    website = WEBSITE
 }
 
