--- a/droidux/build.gradle
+++ b/droidux/build.gradle
@@ -37,10 +37,10 @@ dependencies {
 }
 
 publish {
-    userOrg = 'izumin5210'
-    groupId = 'info.izumin.android'
+    userOrg = USER_ORG
+    groupId = GROUP_ID
     artifactId = 'droidux'
     version = VERSION
     description = '"Predictable state container" implementation, inspired by Redux for JS.'
-    website = 'https://github.com/izumin5210/Droidux'
+    website = WEBSITE
 }
