--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+project_group = info.izumin.android
+project_url = https://github.com/izumin5210/Droidux
+project_bintray_org = izumin5210
