--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -24,18 +24,18 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'com.google.testing.compile:compile-testing:0.6'
     testCompile files(Jvm.current().getToolsJar())
-    compile 'io.reactivex:rxjava:1.0.15'
+    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
     compile 'com.google.android:android:4.1.1.4'
-    compile 'com.android.databinding:baseLibrary:1.0-rc3'
+    compile "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
     compile fileTree(dir: './libs', includes: ['*.jar'])
 }
 
 publish {
-    userOrg = USER_ORG
-    groupId = GROUP_ID
+    userOrg = project_bintray_org
+    groupId = project_group
     artifactId = 'droidux-processor'
-    version = VERSION
+    version = project.version
     description = 'Code generator for info.izumin.android.droidux'
-    website = WEBSITE
+    website = project_url
 }
 
