--- a/examples/counter/build.gradle
+++ b/examples/counter/build.gradle
@@ -1,15 +1,24 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion project.compileSdkVersion
+    buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
         applicationId "info.izumin.android.droidux.example.counter"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion project.minSdkVersion
+        targetSdkVersion project.targetSdkVersion
         versionCode 1
         versionName "1.0"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
     buildTypes {
         release {
@@ -17,10 +26,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
+    compile "io.reactivex:rxandroid:${project.rxAndroidVersion}"
+    compile project(':droidux')
+    apt project(':droidux-processor')
+    compile project(':middlewares:droidux-thunk')
+    compile "com.android.support:appcompat-v7:${project.supportLibrariesVersion}"
+    compile "com.android.support:design:${project.supportLibrariesVersion}"
 }
