Make BaseStore extend android.databinding.Observable

--- a/droidux/build.gradle
+++ b/droidux/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     provided "io.reactivex:rxjava:${project.rxJavaVersion}"
+    provided "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
 
     testCompile 'junit:junit:4.12'
     testCompile "org.spockframework:spock-core:${project.spockCoreVersion}"
