--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext {
     def versionMajor = 0
     def versionMinor = 5
     def versionPatch = 0
-    version = "${versionMajor}.${versionMinor}.${versionPatch}"
+    versionName = "${versionMajor}.${versionMinor}.${versionPatch}"
 
     compileSdkVersion = 23
     buildToolsVersion = '23.0.2'
