--- a/droidux/build.gradle
+++ b/droidux/build.gradle
@@ -1,37 +1,13 @@
-apply plugin: 'com.android.library'
+apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'com.novoda.bintray-release'
-apply plugin: 'groovyx.grooid.groovy-android'
 
-android {
-    compileSdkVersion project.compileSdkVersion
-    buildToolsVersion project.buildToolsVersion
-
-    defaultConfig {
-        minSdkVersion project.minSdkVersion
-        targetSdkVersion project.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-    packagingOptions {
-        exclude 'META-INF/services/javax.annotation.processing.Processor'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    provided "io.reactivex:rxjava:${project.rxJavaVersion}"
-    provided "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
+    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
 
-    testCompile 'junit:junit:4.12'
     testCompile "org.spockframework:spock-core:${project.spockCoreVersion}"
     testCompile "cglib:cglib-nodep:${project.cglibVersion}"
 }
