--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -19,15 +19,16 @@ dependencies {
     compile 'com.google.auto:auto-common:0.5'
     compile 'com.google.auto.service:auto-service:1.0-rc2'
 
+    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
+    compile "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
+    compile fileTree(dir: './libs', includes: ['*.jar'])
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:2.2.0'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'com.google.testing.compile:compile-testing:0.6'
     testCompile files(Jvm.current().getToolsJar())
-    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
-    compile 'com.google.android:android:4.1.1.4'
-    compile "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
-    compile fileTree(dir: './libs', includes: ['*.jar'])
+    testCompile 'com.google.android:android:4.1.1.4'
 }
 
 publish {
