--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,14 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.novoda:bintray-release:0.3.4'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
         classpath 'com.github.groovy:groovy-android-gradle-plugin:1b77dd6763'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
@@ -33,8 +36,8 @@ ext {
     def versionPatch = 0
     versionName = "${versionMajor}.${versionMinor}.${versionPatch}"
 
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.2'
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
     minSdkVersion = 15
     targetSdkVersion = compileSdkVersion
 
