--- a/examples/todos-with-undo/build.gradle
+++ b/examples/todos-with-undo/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -37,7 +35,7 @@ dependencies {
     compile "io.reactivex:rxjava:${project.rxJavaVersion}"
     compile "io.reactivex:rxandroid:${project.rxAndroidVersion}"
     compile project(':droidux')
-    apt project(':droidux-processor')
+    annotationProcessor project(':droidux-processor')
     compile "com.android.support:appcompat-v7:${project.supportLibrariesVersion}"
     compile "com.android.support:design:${project.supportLibrariesVersion}"
     compile 'com.google.code.gson:gson:2.4'
