--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,16 @@ jdk: oraclejdk8
 android:
   components:
     - tools
-    - build-tools-23.0.2
-    - android-23
+    - build-tools-27.0.3
+    - android-27
     - extra-android-support
     - extra-android-m2repository
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+before_install:
+  - yes | sdkmanager "platforms;android-27"
 cache:
   directories:
     - $HOME/.gradle/caches/
