--- a/droidux-processor/build.gradle
+++ b/droidux-processor/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'com.google.auto.service:auto-service:1.0-rc2'
 
     compile "io.reactivex:rxjava:${project.rxJavaVersion}"
+    compile "io.reactivex.rxjava2:rxjava:${project.rxJava2Version}"
     compile "com.android.databinding:baseLibrary:${project.databindingBaseLibraryVersion}"
     compile fileTree(dir: './libs', includes: ['*.jar'])
 
