--- a/examples/counter/build.gradle
+++ b/examples/counter/build.gradle
@@ -30,8 +30,8 @@ android {
 }
 
 dependencies {
-    compile "io.reactivex:rxjava:${project.rxJavaVersion}"
-    compile "io.reactivex:rxandroid:${project.rxAndroidVersion}"
+    compile "io.reactivex.rxjava2:rxjava:${project.rxJava2Version}"
+    compile "io.reactivex.rxjava2:rxandroid:${project.rxAndroid2Version}"
     compile project(':droidux')
     annotationProcessor project(':droidux-processor')
     compile project(':middlewares:droidux-thunk')
